--- a/ex1.html
+++ b/ex1.html
@@ -19,6 +19,10 @@
 
     <script>
         // Write your function here
+        function changeText() {
+            var p = document.getElementById("message")
+            p.innerHTML = ("Hello, World!")
+        }
     </script>
 </body>
 </html>
