--- a/ex4.html
+++ b/ex4.html
@@ -26,6 +26,9 @@
 
     <script>
         // Write your function here
+        document.getElementById("changeColorBtn").addEventListener("click", function(){
+            document.getElementById("box").style.backgroundColor = "purple"
+        })
     </script>
 </body>
 </html>
