--- a/ex3.html
+++ b/ex3.html
@@ -22,6 +22,13 @@
 
     <script>
         // Write your function here
+
+        function insertItem() {
+            var list = document.getElementById("myList");
+            var li = document.createElement("li")
+            li.innerHTML = ("New Item")
+            list.appendChild(li)
+        }
     </script>
 </body>
 </html>
